tests/NormalTests/paczka1/fuzzy1/57840571.err
Error in line 5: n9JJhQBZ4 A110 47,0
Error in line 7: 4gje A539 59,~
Error in line 6: n9JJhQBZ4 A539 69,9
Error in line 16: 4gje A539 15,5
Error in line 12: A110 A539 86,1
Error in line 26: 2Y3R A110 41,1
Error in line 18: A110 A973 92,7
Error in line 31: A110 A535 14,2
Error in line 32: A110 A110 98,4
Error in line 33: 2Y3R A535 30,2
Error in line 23: cqhXQpj A535 36,5
